SimpleComplex/Database 1.x, 2018-05-03
--------------------------------------
- No custom LogicExceptions; logical exceptions should be detected during
  dev/test, and it's better that all (unexpected) database exceptions
  are/inherit from a single class (DbRuntimeException).
- (prepared statement) Prevent de-referencing when using an arguments list
  whose value buckets aren't set as &$value.
- Release 0.9.0.

SimpleComplex/Database 1.x, 2018-05-02
--------------------------------------
- Parameter value escaper shan't escape semicolon, not even when multi-query.
- Result nextRow() is a result interface method.
- MariaDb nextRow() shan't always fail.
- All multi-query features moved to separate (extending) interfaces and classes;
  MS SQL implementation no longer relates to multi-querying at all.
- Forbid reconnecting if unfinished transaction.

SimpleComplex/Database 1.x, 2018-05-01
--------------------------------------
- prepare() support associative arguments array.
- MS SQL insertId() shan't err when ID ;-)
- Better query logging.
- Sql string variables renamed to 'sql'; from 'query'.

SimpleComplex/Database 1.x, 2018-04-30
--------------------------------------
- MS SQL insertId(), and better error handling.
- Freeing result is result method, not a query method.
- Result constructor must accommodate (MySQLi) connection object as well
  as statement.
- An abstract class doesn't have to implement methods of an interface.
- insertId() must return null when query didn't trigger setting an ID.
- MariaDb result; entirely untested, and still wondering about the nature
  of non-selecting multi-queries vs. mysql_multi_query.

SimpleComplex/Database 1.x, 2018-04-24
--------------------------------------
- Clarify which methods are 'package protected'; @internal.
- Order sequence of methods in code by relevance to user.
- More exceptions must be preceded by unsetting prepared statement arguments
  reference.